libraries/upstream/mir-glas/include/glas/ndslice.h

struct glas_MutVector
{
	size_t lengths[1];
	ptrdiff_t strides[1];
	void* ptr;
};
struct glas_ConstVector
{
	size_t lengths[1];
	ptrdiff_t strides[1];
	const void *ptr;
};
float glas_snrm2(struct glas_ConstVector xsl);
double glas_dnrm2(struct glas_ConstVector xsl);
float glas_scnrm2(struct glas_ConstVector xsl);
double glas_dznrm2(struct glas_ConstVector xsl);
float _glas_snrm2(size_t n, size_t incx, const float* x);
double _glas_dnrm2(size_t n, size_t incx, const double* x);
float _glas_scnrm2(size_t n, size_t incx, const float _Complex* x);
double _glas_dznrm2(size_t n, size_t incx, const double _Complex* x);
float glas_sasum(struct glas_ConstVector xsl);
double glas_dasum(struct glas_ConstVector xsl);
float glas_scasum(struct glas_ConstVector xsl);
double glas_dzasum(struct glas_ConstVector xsl);
float _glas_sasum(size_t n, size_t incx, const float* x);
double _glas_dasum(size_t n, size_t incx, const double* x);
float _glas_scasum(size_t n, size_t incx, const float _Complex* x);
double _glas_dzasum(size_t n, size_t incx, const double _Complex* x);
ptrdiff_t glas_isamax(struct glas_ConstVector xsl);
ptrdiff_t glas_idamax(struct glas_ConstVector xsl);
ptrdiff_t glas_icamax(struct glas_ConstVector xsl);
ptrdiff_t glas_izamax(struct glas_ConstVector xsl);
ptrdiff_t _glas_isamax(size_t n, size_t incx, const float* x);
ptrdiff_t _glas_idamax(size_t n, size_t incx, const double* x);
ptrdiff_t _glas_icamax(size_t n, size_t incx, const float _Complex* x);
ptrdiff_t _glas_izamax(size_t n, size_t incx, const double _Complex* x);
void glas_sscal(float a, struct glas_MutVector xsl);
void glas_dscal(double a, struct glas_MutVector xsl);
void glas_csscal(float a, struct glas_MutVector xsl);
void glas_cscal(float _Complex a, struct glas_MutVector xsl);
void glas_csIscal(float a, struct glas_MutVector xsl);
void glas_zdscal(double a, struct glas_MutVector xsl);
void glas_zscal(double _Complex a, struct glas_MutVector xsl);
void glas_zdIscal(double a, struct glas_MutVector xsl);
void _glas_sscal(float a, size_t n, size_t incx, float* x);
void _glas_dscal(double a, size_t n, size_t incx, double* x);
void _glas_csscal(float a, size_t n, size_t incx, float _Complex* x);
void _glas_cscal(float _Complex a, size_t n, size_t incx, float _Complex* x);
void _glas_csIscal(float a, size_t n, size_t incx, float _Complex* x);
void _glas_zdscal(double a, size_t n, size_t incx, double _Complex* x);
void _glas_zscal(double _Complex a, size_t n, size_t incx, double _Complex* x);
void _glas_zdIscal(double a, size_t n, size_t incx, double _Complex* x);