libraries/upstream/mir-glas/source/glas/ndslice.d


/++
Applies a modified plane rotation.

Unified_alias: `rotn`

BLAS: SROTM, DROTM
+/
void glas_srotm(Slice!(SliceKind.universal, [1], float*) xsl, Slice!(SliceKind.universal, [1], float*) ysl, ref const float[5] sparam);
/// ditto
void glas_drotm(Slice!(SliceKind.universal, [1], double*) xsl, Slice!(SliceKind.universal, [1], double*) ysl, ref const double[5] sparam);

/// ditto
void _glas_srotm(size_t n, ptrdiff_t incx, float* x, ptrdiff_t incy, float* y, ref const float[5] sparam);
/// ditto
void _glas_drotm(size_t n, ptrdiff_t incx, double* x, ptrdiff_t incy, double* y, ref const double[5] sparam);

/// ditto
alias rotm = glas_srotm;
/// ditto
alias rotm = glas_drotm;

/// ditto
alias rotm = _glas_srotm;
/// ditto
alias rotm = _glas_drotm;

/++
Forms the dot product of two vectors.
Uses unrolled loops for increments equal to one.

Unified_alias: `dot`

Pseudo_code: `X^T * Y`

BLAS: SDOT, DDOT
+/
float glas_sdot(Slice!(SliceKind.universal, [1], const(float)*) xsl, Slice!(SliceKind.universal, [1], const(float)*) ysl);
/// ditto
double glas_ddot(Slice!(SliceKind.universal, [1], const(double)*) xsl, Slice!(SliceKind.universal, [1], const(double)*) ysl);

/// ditto
float _glas_sdot(size_t n, ptrdiff_t incx, const(float)* x, ptrdiff_t incy, const(float)* y);
/// ditto
double _glas_ddot(size_t n, ptrdiff_t incx, const(double)* x, ptrdiff_t incy, const(double)* y);

/// ditto
alias dot = glas_sdot;
/// ditto
alias dot = glas_ddot;

/// ditto
alias dot = _glas_sdot;
/// ditto
alias dot = _glas_ddot;

/++
Compute the inner product of two vectors with extended
precision accumulation and result.
Uses unrolled loops for increments equal to one.

Unified_alias: `dot`

Pseudo_code: `X^T * Y`

BLAS: DSDOT
+/
double glas_dsdot(Slice!(SliceKind.universal, [1], const(float)*) xsl, Slice!(SliceKind.universal, [1], const(float)*) ysl);

/// ditto
double _glas_dsdot(size_t n, ptrdiff_t incx, const(float)* x, ptrdiff_t incy, const(float)* y);

/// ditto
alias dsdot = glas_dsdot;

/// ditto
alias dsdot = _glas_dsdot;

/++
Forms the dot product of two complex vectors.
Uses unrolled loops for increments equal to one.

Unified_alias: `dotu`

Pseudo_code: `X^T * Y`

BLAS: CDOTU, ZDOTU
+/
cfloat glas_cdotu(Slice!(SliceKind.universal, [1], const(cfloat)*) xsl, Slice!(SliceKind.universal, [1], const(cfloat)*) ysl);
/// ditto
cdouble glas_zdotu(Slice!(SliceKind.universal, [1], const(cdouble)*) xsl, Slice!(SliceKind.universal, [1], const(cdouble)*) ysl);

/// ditto
cfloat _glas_cdotu(size_t n, ptrdiff_t incx, const(cfloat)* x, ptrdiff_t incy, const(cfloat)* y);
/// ditto
cdouble _glas_zdotu(size_t n, ptrdiff_t incx, const(cdouble)* x, ptrdiff_t incy, const(cdouble)* y);

/// ditto
alias dotu = glas_cdotu;
/// ditto
alias dotu = glas_zdotu;

/// ditto
alias dotu = _glas_cdotu;
/// ditto
alias dotu = _glas_zdotu;


/++
Forms the dot product of two complex vectors.
Uses unrolled loops for increments equal to one.

Unified_alias: `dotc`

Pseudo_code: `X^H * Y`

BLAS: CDOTC, ZDOTC
+/
cfloat glas_cdotc(Slice!(SliceKind.universal, [1], const(cfloat)*) xsl, Slice!(SliceKind.universal, [1], const(cfloat)*) ysl);
/// ditto
cdouble glas_zdotc(Slice!(SliceKind.universal, [1], const(cdouble)*) xsl, Slice!(SliceKind.universal, [1], const(cdouble)*) ysl);

/// ditto
cfloat _glas_cdotc(size_t n, ptrdiff_t incx, const(cfloat)* x, ptrdiff_t incy, const(cfloat)* y);
/// ditto
cdouble _glas_zdotc(size_t n, ptrdiff_t incx, const(cdouble)* x, ptrdiff_t incy, const(cdouble)* y);

/// ditto
alias dotc = glas_cdotc;
/// ditto
alias dotc = glas_zdotc;

/// ditto
alias dotc = _glas_cdotc;
/// ditto
alias dotc = _glas_zdotc;


/++
Returns the euclidean norm of a vector via the function.

Pseudo_code: `sqrt( x'*x )`.

Unified_alias: `nrm2`

BLAS: SNRM2, DNRM2, SCNRM2, DZNRM2
+/
float glas_snrm2(Slice!(SliceKind.universal, [1], const(float)*) xsl);
/// ditto
double glas_dnrm2(Slice!(SliceKind.universal, [1], const(double)*) xsl);
/// ditto
float glas_scnrm2(Slice!(SliceKind.universal, [1], const(cfloat)*) xsl);
/// ditto
double glas_dznrm2(Slice!(SliceKind.universal, [1], const(cdouble)*) xsl);

/// ditto
float _glas_snrm2(size_t n, ptrdiff_t incx, const(float)* x);
/// ditto
double _glas_dnrm2(size_t n, ptrdiff_t incx, const(double)* x);
/// ditto
float _glas_scnrm2(size_t n, ptrdiff_t incx, const(cfloat)* x);
/// ditto
double _glas_dznrm2(size_t n, ptrdiff_t incx, const(cdouble)* x);

/// ditto
alias nrm2 = glas_snrm2;
/// ditto
alias nrm2 = glas_dnrm2;
/// ditto
alias nrm2 = glas_scnrm2;
/// ditto
alias nrm2 = glas_dznrm2;

/// ditto
alias nrm2 = _glas_snrm2;
/// ditto
alias nrm2 = _glas_dnrm2;
/// ditto
alias nrm2 = _glas_scnrm2;
/// ditto
alias nrm2 = _glas_dznrm2;

/++
Takes the sum of the absolute values.

Unified_alias: `asum`

BLAS: SASUM, DASUM, SCASUM, DZASUM
+/
float glas_sasum(Slice!(SliceKind.universal, [1], const(float)*) xsl);
/// ditto
double glas_dasum(Slice!(SliceKind.universal, [1], const(double)*) xsl);
/// ditto
float glas_scasum(Slice!(SliceKind.universal, [1], const(cfloat)*) xsl);
/// ditto
double glas_dzasum(Slice!(SliceKind.universal, [1], const(cdouble)*) xsl);

/// ditto
float _glas_sasum(size_t n, ptrdiff_t incx, const(float)* x);
/// ditto
double _glas_dasum(size_t n, ptrdiff_t incx, const(double)* x);
/// ditto
float _glas_scasum(size_t n, ptrdiff_t incx, const(cfloat)* x);
/// ditto
double _glas_dzasum(size_t n, ptrdiff_t incx, const(cdouble)* x);

/// ditto
alias asum = glas_sasum;
/// ditto
alias asum = glas_dasum;
/// ditto
alias asum = glas_scasum;
/// ditto
alias asum = glas_dzasum;

/// ditto
alias asum = _glas_sasum;
/// ditto
alias asum = _glas_dasum;
/// ditto
alias asum = _glas_scasum;
/// ditto
alias asum = _glas_dzasum;

/++
Finds the index of the first element having maximum `|Re(.)| + |Im(.)|`.

Unified_alias: `amax`

BLAS: ISAMAX, IDAMAX, ICAMAX, IZAMAX
+/
ptrdiff_t glas_isamax(Slice!(SliceKind.universal, [1], const(float)*) xsl);
/// ditto
ptrdiff_t glas_idamax(Slice!(SliceKind.universal, [1], const(double)*) xsl);
/// ditto
ptrdiff_t glas_icamax(Slice!(SliceKind.universal, [1], const(cfloat)*) xsl);
/// ditto
ptrdiff_t glas_izamax(Slice!(SliceKind.universal, [1], const(cdouble)*) xsl);

/// ditto
ptrdiff_t _glas_isamax(size_t n, ptrdiff_t incx, const(float)* x);
/// ditto
ptrdiff_t _glas_idamax(size_t n, ptrdiff_t incx, const(double)* x);
/// ditto
ptrdiff_t _glas_icamax(size_t n, ptrdiff_t incx, const(cfloat)* x);
/// ditto
ptrdiff_t _glas_izamax(size_t n, ptrdiff_t incx, const(cdouble)* x);

/// ditto
alias iamax = glas_isamax;
/// ditto
alias iamax = glas_idamax;
/// ditto
alias iamax = glas_icamax;
/// ditto
alias iamax = glas_izamax;

/// ditto
alias iamax = _glas_isamax;
/// ditto
alias iamax = _glas_idamax;
/// ditto
alias iamax = _glas_icamax;
/// ditto
alias iamax = _glas_izamax;

/++
`scal` scales a vector by a constant.

Pseudo_code: `x := a x`.

Unified_alias: `scal`

BLAS: SSSCAL, DSSCAL, CSSCAL, ZSSCAL, CSCAL, ZSCAL
+/
void glas_sscal(float a, Slice!(SliceKind.universal, [1], float*) xsl);
/// ditto
void glas_dscal(double a, Slice!(SliceKind.universal, [1], double*) xsl);
/// ditto
void glas_csscal(float a, Slice!(SliceKind.universal, [1], cfloat*) xsl);
/// ditto
void glas_cscal(cfloat a, Slice!(SliceKind.universal, [1], cfloat*) xsl);
/// ditto
void glas_csIscal(ifloat a, Slice!(SliceKind.universal, [1], cfloat*) xsl);
/// ditto
void glas_zdscal(double a, Slice!(SliceKind.universal, [1], cdouble*) xsl);
/// ditto
void glas_zscal(cdouble a, Slice!(SliceKind.universal, [1], cdouble*) xsl);
/// ditto
void glas_zdIscal(idouble a, Slice!(SliceKind.universal, [1], cdouble*) xsl);

/// ditto
void _glas_sscal(float a, size_t n, ptrdiff_t incx, float* x);
/// ditto
void _glas_dscal(double a, size_t n, ptrdiff_t incx, double* x);
/// ditto
void _glas_csscal(float a, size_t n, ptrdiff_t incx, cfloat* x);
/// ditto
void _glas_cscal(cfloat a, size_t n, ptrdiff_t incx, cfloat* x);
/// ditto
void _glas_csIscal(ifloat a, size_t n, ptrdiff_t incx, cfloat* x);
/// ditto
void _glas_zdscal(double a, size_t n, ptrdiff_t incx, cdouble* x);
/// ditto
void _glas_zscal(cdouble a, size_t n, ptrdiff_t incx, cdouble* x);
/// ditto
void _glas_zdIscal(idouble a, size_t n, ptrdiff_t incx, cdouble* x);

/// ditto
alias scal = glas_sscal;
/// ditto
alias scal = glas_dscal;
/// ditto
alias scal = glas_csscal;
/// ditto
alias scal = glas_cscal;
/// ditto
alias scal = glas_csIscal;
/// ditto
alias scal = glas_zdscal;
/// ditto
alias scal = glas_zscal;
/// ditto
alias scal = glas_zdIscal;

/// ditto
alias scal = _glas_sscal;
/// ditto
alias scal = _glas_dscal;
/// ditto
alias scal = _glas_csscal;
/// ditto
alias scal = _glas_cscal;
/// ditto
alias scal = _glas_csIscal;
/// ditto
alias scal = _glas_zdscal;
/// ditto
alias scal = _glas_zscal;
/// ditto
alias scal = _glas_zdIscal;
